replacing swagger file
